--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -52,28 +52,30 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
     </left-nav-collapse>
     <div class="site-container homepage-main-content" id="main-content">
         <div class="cta__container">
-            <div class="video__container">
-                <a
-                    href="https://www.youtube.com/watch?v=dqy8WCFedU4"
-                    target="_blank"
-                >
-                    <img
-                        src="{% static 'images/home_video.png' %}"
-                        alt="View a 3-minute video demonstration."
-                    />
-                </a>
-                <label id="videoLabel">View a 3-minute video demonstration.</label>
-            </div>
-            <div class="about-text__container">
-                <p>
-                    eRegulations organizes together regulations, subregulatory
-                    guidance, and other related policy materials.
-                </p>
-                <a
-                    href="{% url 'about' %}"
-                    class="action-btn default-btn link-btn"
-                    >Learn About This Tool</a
-                >
+            <div class="cta">
+                <div class="video__container">
+                    <a
+                        href="https://www.youtube.com/watch?v=dqy8WCFedU4"
+                        target="_blank"
+                    >
+                        <img
+                            src="{% static 'images/home_video.png' %}"
+                            alt="View a 3-minute video demonstration."
+                        />
+                    </a>
+                    <label id="videoLabel">View a 3-minute video demonstration.</label>
+                </div>
+                <div class="about-text__container">
+                    <p>
+                        eRegulations organizes together regulations, subregulatory
+                        guidance, and other related policy materials.
+                    </p>
+                    <a
+                        href="{% url 'about' %}"
+                        class="action-btn default-btn link-btn"
+                        >Learn About This Tool</a
+                    >
+                </div>
             </div>
         </div>
         <div class="resources__container">
