--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -250,35 +250,71 @@
     }
 
     #main-content {
+        width: 100%;
+
+        @media (max-width: $eds-xs-max) {
+            box-sizing: border-box;
+        }
+
         .cta__container {
-            display: flex;
-            flex-direction: row;
+            container: cta-container / inline-size;
 
-            .video__container {
-                flex: 2;
-                margin-right: 15px;
+            @container cta-container (max-width: 629px) {
+                .cta {
+                    flex-direction: column;
 
-                img {
-                    width: 100%;
-                    border-radius: 3px;
-                }
+                    .video__container {
+                        margin-right: 0;
+                    }
 
-                label {
-                    font-size: 12px;
-                    color: $mid_gray;
+                    .about-text__container {
+                        margin-left: 0;
+                    }
                 }
             }
 
-            .about-text__container {
-                flex: 1;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                margin-left: 15px;
+            @container cta-container (min-width: 630px) {
+                .cta {
+                    flex-direction: row;
 
-                p {
-                    font-size: 18px;
-                    line-height: 24px;
+                    .video__container {
+                        margin-right: 15px;
+                    }
+
+                    .about-text__container {
+                        margin-left: 15px;
+                        margin-bottom: 30px;
+                    }
+                }
+            }
+
+            .cta {
+                display: flex;
+
+                .video__container {
+                    flex: 2;
+
+                    img {
+                        width: 100%;
+                        border-radius: 3px;
+                    }
+
+                    label {
+                        font-size: 12px;
+                        color: $mid_gray;
+                    }
+                }
+
+                .about-text__container {
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
+                    p {
+                        font-size: 18px;
+                        line-height: 24px;
+                    }
                 }
             }
         }
