--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -112,11 +112,18 @@
 
                     .related-sections-title {
                         @include common-context-related-sections;
+
                         text-transform: uppercase;
+                    }
+
+                    .title__span, .section-sign, .pipe-separator {
+                        color: $mid_gray;
+                        font-size: 14px;
                     }
 
                     .related-section-link {
                         @include common-context-related-sections;
+
                         a {
                             text-decoration: none;
                         }
