Create new component for display

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -79,7 +79,12 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
             </div>
         </div>
         <div class="resources__container">
-            <div class="rules-guidance__container"></div>
+            <div class="rules-guidance__container">
+                <resources-component 
+                    api_url={{ API_BASE }}
+                >
+                </resources-component>
+            </div>
             <div class="search-description__container"></div>
         </div>
     </div>
