attempting to get stuff going

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -78,8 +78,8 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                 </div>
             </div>
         </div>
-        <div class="resources__container">
-            <div class="rules-guidance__container">
+        <div class="resources__container cta__container">
+            <div class="rules-guidance__container cta">
                 <resources-component 
                     api_url={{ API_BASE }}
                 >
