--- a/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
+++ b/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
@@ -117,8 +117,8 @@
     }
 
     .supplemental-content-date {
-        color: $primary_link_color;
-        font-weight: bold;
+        color: #5B616B;
+        font-weight: 400;
         padding-right: $spacer-1;
         margin-right: $spacer-1;
         font-size: $font-size-sm;
@@ -129,8 +129,8 @@
     }
 
     .supplemental-content-title {
-        color: $primary_link_color;
-        font-weight: bold;
+        color: #5B616B;
+        font-weight: 400;
         font-size: $font-size-sm;
     }
 
