--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -89,14 +89,9 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
         </div>
         <div class="about-text__container">
             <p>
-                eRegulations organizes together regulations, subregulatory
-                guidance, and other related policy materials.
+                Search Policy Materials
             </p>
-            <a
-                href="{% url 'about' %}"
-                class="action-btn default-btn link-btn"
-                >Learn About This Tool</a
-            >
+<p> placeholder text </p>
 
     </div></div>
         </div>
