--- a/solution/backend/regulations/templates/admin/conversions_imported.html
+++ b/solution/backend/regulations/templates/admin/conversions_imported.html
@@ -8,16 +8,16 @@
             <p>The following Statute Link Conversions have been imported:</p>
             <ul>
             {% for c in conversions %}
-                <li>Title {{ c.statute_title }} section {{ c.section }} of the {{ c.act }} → {{ c.title }} USC {{ c.usc }}: {{ c.name }}</li>
+                <li><a target="_blank" href="{% url 'admin:regulations_statutelinkconverter_change' c.id %}">Title {{ c.statute_title }} section {{ c.section }} of the {{ c.act }} → {{ c.title }} USC {{ c.usc }}: <i>{{ c.name }}</i></a></li>
             {% endfor %}
             </ul>
         {% endif %}
 
         {% if failures %}
-            <p>The following conversions failed to import:</p>
+            <p>The following conversions were imported but have no name or title because they were not in the table of contents:</p>
             <ul>
             {% for f in failures %}
-                <li>Title {{ f.title }} section {{ f.section }} → {{ f.title }} USC {{ f.usc }}</li>
+                <li><a target="_blank" href="{% url 'admin:regulations_statutelinkconverter_change' f.id %}">{{ f.act }} section {{ f.section }} → {{ f.title }} USC {{ f.usc }}</a></li>
             {% endfor %}
             </ul>
         {% endif %}
