renamed component additional style changes

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -81,7 +81,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
         <div class="cta__container">
             <div class="cta">
                 <div class="resources__container">
-                        <resources-component 
+                        <recent-resources
                             api_url={{ API_BASE }}
                             resource_link='{% url 'resources' %}'
                             fr_doc_link='{% url 'resources' %}?resourceCategory={{ fr_docs_category_name }}'
