--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -82,6 +82,36 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
             <div class="rules-guidance__container"></div>
             <div class="search-description__container"></div>
         </div>
+        <div class="contact-signup__container">
+            <div class="contact-signup">
+                <div class="contact__column">
+                    <h4>Contact</h4>
+                    <p>
+                        Send questions and suggestions about this website
+                        (including bug reports), or schedule a presentation or
+                        training for your group.
+                    </p>
+                    <a
+                        class="external"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSdoovq7qgVRYsgLeZ7TrXNmnTU42iHCvr1x06CgcWQectlVAw/viewform"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >Contact the team</a
+                    >
+                </div>
+                <div class="signup__column">
+                    <h4>Sign Up For Testing</h4>
+                    <p>Try new features and help make them better.</p>
+                    <a
+                        class="external"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLScesNzqS-Kgpcjq3AxESy1tP0zlcs3CdgkCVr3LBOiUTxxbvw/viewform"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >Sign up for a session</a
+                    >
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
