feat: add icons, better styles

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -84,31 +84,47 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
         </div>
         <div class="contact-signup__container">
             <div class="contact-signup">
-                <div class="contact__column">
-                    <h4>Contact</h4>
-                    <p>
-                        Send questions and suggestions about this website
-                        (including bug reports), or schedule a presentation or
-                        training for your group.
-                    </p>
-                    <a
-                        class="external"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSdoovq7qgVRYsgLeZ7TrXNmnTU42iHCvr1x06CgcWQectlVAw/viewform"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Contact the team</a
-                    >
+                <div class="contact-signup__column contact__column">
+                    <div class="column__icon contact__icon">
+                        <img
+                            src="{% static 'images/home_icon_contact.svg' %}"
+                            alt="View a 3-minute video demonstration."
+                        />
+                    </div>
+                    <div>
+                        <h4>Contact</h4>
+                        <p>
+                            Send questions and suggestions about this website
+                            (including bug reports), or schedule a presentation or
+                            training for your group.
+                        </p>
+                        <a
+                            class="external"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSdoovq7qgVRYsgLeZ7TrXNmnTU42iHCvr1x06CgcWQectlVAw/viewform"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >Contact the team</a
+                        >
+                    </div>
                 </div>
-                <div class="signup__column">
-                    <h4>Sign Up For Testing</h4>
-                    <p>Try new features and help make them better.</p>
-                    <a
-                        class="external"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLScesNzqS-Kgpcjq3AxESy1tP0zlcs3CdgkCVr3LBOiUTxxbvw/viewform"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >Sign up for a session</a
-                    >
+                <div class="contact-signup__column signup__column">
+                    <div class="column__icon signup__icon">
+                        <img
+                            src="{% static 'images/home_icon_testing.svg' %}"
+                            alt="View a 3-minute video demonstration."
+                        />
+                    </div>
+                    <div>
+                        <h4>Sign Up For Testing</h4>
+                        <p>Try new features and help make them better.</p>
+                        <a
+                            class="external"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLScesNzqS-Kgpcjq3AxESy1tP0zlcs3CdgkCVr3LBOiUTxxbvw/viewform"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >Sign up for a session</a
+                        >
+                    </div>
                 </div>
             </div>
         </div>
