--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -353,21 +353,55 @@
             @mixin column-common {
                 display: flex;
                 flex: 1;
-                flex-direction: column;
-                justify-content: center;
-                padding: 40px;
+                flex-direction: row;
             }
 
             @container contact-signup-container (max-width: 629px) {
                 .contact-signup {
                     flex-direction: column;
+
+                    .contact-signup__column {
+                        margin: 0 10px;
+                        padding: 20px 0;
+
+                        &.contact__column {
+                            border-bottom: 1px solid $border_color;
+                        }
+
+                        .column__icon {
+                            margin-right: 10px;
+                        }
+                    }
                 }
             }
 
             @container contact-signup-container (min-width: 630px) {
                 .contact-signup {
                     flex-direction: row;
+
+                    .contact-signup__column {
+                        margin: 40px 0;
+                        padding: 0 40px;
+
+                        &.contact__column {
+                            border-right: 1px solid $border_color;
+                        }
+
+                        .column__icon {
+                            margin-right: 24px;
+                        }
+                    }
                 }
+            }
+
+            h4 {
+                font-size: 18px;
+                line-height: 24px;
+            }
+
+            p {
+                font-size: 14px;
+                line-height: 22px;
             }
 
             .contact-signup {
@@ -375,12 +409,20 @@
                 background-color: $teal;
                 color: white;
 
-                .contact__column {
-                    @include column-common;
-                }
+                .contact-signup__column {
+                    .column__icon {
+                        img {
+                            height: 90px;
+                        }
+                    }
 
-                .signup__column {
-                    @include column-common;
+                    &.contact__column {
+                        @include column-common;
+                    }
+
+                    &.signup__column {
+                        @include column-common;
+                    }
                 }
             }
         }
