--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -312,6 +312,7 @@
                             font-family: 'Merriweather';
                             font-weight: 700;
                             flex: 1 1 auto;
+                            font-size: 24px;
                         }
                     }
                 }
