--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -24,7 +24,7 @@
             padding-top: 8px;
             padding-bottom: 8px;
 
-            &:hover {
+            &:hover, &:visited {
                 color: white;
             }
         }
