feat: refactor external link icon to better change color

--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -35,16 +35,14 @@
             color: $hero_link_hover;
 
             &:link::after {
-                color: $hero_link_hover;
-                filter: hue-rotate(14deg);
+                background-color: $hero_link_hover;
             }
 
             &:visited {
                 color: $hero_link_hover;
 
                 &::after {
-                    color: $hero_link_hover;
-                    filter: hue-rotate(14deg);
+                    background-color: $hero_link_hover;
                 }
             }
         }
