feat: remove hardcoded links and from param store

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -100,7 +100,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                         </p>
                         <a
                             class="external"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdoovq7qgVRYsgLeZ7TrXNmnTU42iHCvr1x06CgcWQectlVAw/viewform"
+                            href="{{ SURVEY_URL }}"
                             target="_blank"
                             rel="noopener noreferrer"
                             >Contact the team</a
@@ -119,7 +119,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                         <p>Try new features and help make them better.</p>
                         <a
                             class="external"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLScesNzqS-Kgpcjq3AxESy1tP0zlcs3CdgkCVr3LBOiUTxxbvw/viewform"
+                            href="{{ SIGNUP_URL }}"
                             target="_blank"
                             rel="noopener noreferrer"
                             >Sign up for a session</a
