feat: remove embedded=true param from survey URL in param store
append it to end of URL in template instead

--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -40,7 +40,7 @@ CSS/Javascript etc., should inherit from this template.
                     where-used="django"
                 >
                     <i-frame-container
-                        src="{{ SURVEY_URL }}"
+                        src="{{ SURVEY_URL }}?embedded=true"
                         title="Google Forms iframe"
                     ></i-frame-container>
                 </blocking-modal>
